force-app/main/default/objects/Telia_Address__c/Telia_Address__c.object-meta.xml
<CustomObject>
    <label>Telia Address</label>
    <nameField>
        <label>Telia Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Telia Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>