force-app/main/default/objects/Telia_Address__c/fields/Telia_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Telia_Address_City__c</fullName>
    <label>Telia Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>