force-app/main/default/objects/Telia_Address__c/fields/Telia_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Telia_Address_Line_1__c</fullName>
    <label>Telia Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>