force-app/main/default/objects/Telia_Address__c/fields/Telia_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Telia_Address_Line_2__c</fullName>
    <label>Telia Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>