force-app/main/default/objects/Telia_Address__c/fields/Telia_Address_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Telia_Address_Zipcode__c</fullName>
    <label>Telia Address Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>