force-app/main/default/objects/Telia_Address__c/recordTypes/TeliaAddress.recordType-meta.xml
<RecordType>
    <fullName>TeliaAddress</fullName>
    <active>true</active>
    <label>TeliaAddress</label>
</RecordType>